--- a/bold.html
+++ b/bold.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
     <title>Tiago's Portfolio</title>
-    <link rel="icon" href="Images/ass.png">
+    <link rel="icon" href="Images/ass.webp">
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
@@ -14,7 +14,7 @@
                 <a href="index.html"style="padding-left: 100px"> WORK </a>
             </td>
             <td style="width: 50%; padding-left: 10px; padding-top: 4px">
-                <a href = "mailto: info@tfcoelho.com">Contact</a>
+                <a href = "mailto: tiagofc2000@gmail.com">Contact</a>
             </td>
         </table>
     </div>
@@ -32,19 +32,19 @@
     <tr>
         <th style="width:38.5%" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/orange1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:35%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:15.6%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/orange3.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -52,7 +52,7 @@
     <tr>
         <th style="width:50%;" colspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
                 <div><p>PARIS, 2021</p></div>
             </div>
         </th>
@@ -64,25 +64,25 @@
     <tr>
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
                 <div><p>PARIS, 2021</p></div>
             </div>
         </th>
@@ -91,19 +91,19 @@
 <table style="padding-top: -10px; width:60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue5.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue5.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue6.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:8%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue7.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -113,7 +113,7 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -122,7 +122,7 @@
     <tr>
         <th style="width:50%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/red2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/red2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -133,14 +133,14 @@
     <tr>
         <th style="width:45%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/green1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/green1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:45%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/green2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/green2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -151,28 +151,28 @@
     <tr>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -182,14 +182,14 @@
     <tr>
         <th style="width:67%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white6.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:0.5%"></th>
         <th style="width:30%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/white5.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -200,38 +200,38 @@
     <tr>
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out3.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out4.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
 
         <th style="width:16.66%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out5.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out5.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:14.9%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/out6.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/out6.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -239,7 +239,7 @@
     <tr>
         <th colspan="6">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/pano.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/pano.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
