--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css">
   <title>Tiago's Portfolio</title>
-  <link rel="icon" href="Images/ass.png">
+  <link rel="icon" href="Images/ass.webp">
   <style>
     .container2 {
       display: block;
@@ -54,7 +54,7 @@
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
   <div style="width: 33.3332%; text-align: left; padding-top: 30px">
     <a href="index.html"style="padding-left: 100px"> WORK </a></td>
-    <a href = "mailto: info@tfcoelho.com" style="padding-left: 20px"> CONTACT </a>
+    <a href = "mailto: tiagofc2000@gmail.com" style="padding-left: 20px"> CONTACT </a>
   </div>
   <div style="flex-grow: 1; width: 33.3332%; padding-top: 0px">
     <a href="index.html"><img src="Images/Signature.png" class ="center"> </a>
@@ -69,10 +69,10 @@
     <tr style="width:50%; align:center">
       <th>
         <div class="container2">
-          <img src="Images/ass3.png" alt="" class="image">
+          <img src="Images/ass3.webp" alt="" class="image">
           <a href="matte.html">
             <div class="overlay">
-              <img src="Images/ass5.png" alt="" class="image">
+              <img src="Images/ass5.webp" alt="" class="image">
             </div>
             <div class="overlay" style="opacity: 1">
               <div class="text2">
@@ -86,10 +86,10 @@
       </th>
       <th>
         <div class="container2">
-          <img src="Images/assc.png" alt="" class="image">
+          <img src="Images/assc.webp" alt="" class="image">
           <a href="bold.html">
             <div class="overlay">
-              <img src="Images/ass2.png" alt="" class="image">
+              <img src="Images/ass2.webp" alt="" class="image">
             </div>
             <div class="overlay" style="opacity: 1">
               <div class="text2" >
