--- a/matte.html
+++ b/matte.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
     <title>Tiago's Portfolio</title>
-    <link rel="icon" href="Images/ass.png">
+    <link rel="icon" href="Images/ass.webp">
 </head>
 <body bgcolor="#1F1F1F">
 <header class="container" style="display: flex; height: 100px; padding-top: 70px">
@@ -14,7 +14,7 @@
                 <a href="index.html"style="padding-left: 100px"> WORK </a>
             </td>
             <td style="width: 50%; padding-left: 10px; padding-top: 4px">
-                <a href = "mailto: info@tfcoelho.com">contact</a>
+                <a href = "mailto: tiagofc2000@gmail.com">contact</a>
             </td>
         </table>
     </div>
@@ -32,19 +32,19 @@
     <tr>
         <th style="width:26.40%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/fendi.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/fendi.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
         <th style="width:23.40%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/tunel.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/tunel.webp" style="width: 100%">
                 <div><p>ANTWERP, 2021</p></div>
             </div>
         </th>
         <th style="width:49.8%;" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/maserati.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/maserati.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -52,7 +52,7 @@
     <tr>
         <th style="width:50%;" colspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/eiffel.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/eiffel.webp" style="width: 100%">
                 <div><p>PARIS, 2021</p></div>
             </div>
         </th>
@@ -64,31 +64,31 @@
     <tr>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/berlin1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/berlin1.webp" style="width: 100%">
                 <div><p>BERLIN, 2021</p></div>
             </div>
         </th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lisbon1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lisbon1.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/vans.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/vans.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lisbon2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lisbon2.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
         <th style="width:20%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/berlin2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/berlin2.webp" style="width: 100%">
                 <div><p>BERLIN, 2021</p></div>
             </div>
         </th>
@@ -99,31 +99,31 @@
     <tr>
         <th style="width:7.8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/rome1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/rome1.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:18%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/rome2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/rome2.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/rome3.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:17%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/rome4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/rome4.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:43.5%" rowspan="3">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/rome11.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/rome11.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -133,25 +133,25 @@
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
                 <th style="width:11.1%">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome5.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome5.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
                 <th style="width:24.9%">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome6.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome6.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
                 <th style="width:11.1%">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome7.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome7.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
                 <th style="width:11.1%">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome3.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome3.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
@@ -163,13 +163,13 @@
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
                 <th style="width:25%" colspan="2">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome9.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome9.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
                 <th style="width:25%" colspan="2">
                     <div class="content_img">
-                        <img class = "myImages" id="myImg" src="Images/rome10.jpg" style="width: 100%">
+                        <img class = "myImages" id="myImg" src="Images/rome10.webp" style="width: 100%">
                         <div><p>ROME, 2021</p></div>
                     </div>
                 </th>
@@ -186,7 +186,7 @@
     <tr>
         <th style="width:100%" colspan="3">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lx1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lx1.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
@@ -194,19 +194,19 @@
     <tr>
         <th style="width:33.332%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lx2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lx2.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
         <th style="width:33.332%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lx3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lx3.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
         <th style="width:33.332%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/lx4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/lx4.webp" style="width: 100%">
                 <div><p>LISBON, 2020</p></div>
             </div>
         </th>
@@ -214,7 +214,7 @@
 </table>
 
 <div class="center3">
-    <img class = "myImages" id="myImg" src="Images/ps.jpg" style="width: 100%">
+    <img class = "myImages" id="myImg" src="Images/ps.webp" style="width: 100%">
 </div>
 
 <div style="text-align: center;">
@@ -223,10 +223,10 @@
 
 <table style="padding-top: 100px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="15" border="0">
     <tr>
-        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym1.jpg" style="width: 100%"></th>
-        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym2.jpg" style="width: 100%"></th>
-        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym3.jpg" style="width: 100%"></th>
-        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym4.jpg" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym1.webp" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym2.webp" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym3.webp" style="width: 100%"></th>
+        <th style="width:17%"><img class = "myImages" id="myImg" src="Images/gym4.webp" style="width: 100%"></th>
     </tr>
 </table>
 
@@ -235,19 +235,19 @@
     <tr>
         <th style="width:25%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ava1.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ava1.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
         <th style="width:25%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ava3.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ava3.webp" style="width: 100%">
                 <div><p>PORTIMÃO, 2022</p></div>
             </div>
         </th>
         <th style="width:42%" rowspan="2">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ava5.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ava5.webp" style="width: 100%">
                 <div><p>PORTIMÃO, 2022</p></div>
             </div>
         </th>
@@ -255,13 +255,13 @@
     <tr>
         <th style="width:25%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ava4.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ava4.webp" style="width: 100%">
                 <div><p>PORTIMÃO, 2022</p></div>
             </div>
         </th>
         <th style="width:25%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ava2.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ava2.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -273,20 +273,20 @@
     <tr>
         <th style="width:32.2%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/buda.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/buda.webp" style="width: 100%">
                 <div><p>BUDAPEST, 2021</p></div>
             </div>
         </th>
         <th style="width: 5px"/>
         <th style="width:28.6%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/ams.jpg" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/ams.webp" style="width: 100%">
                 <div><p>AMSTERDAM, 2021</p></div>
             </div>
         </th>
         <th style="width: 5px"/>
         <th style="width:34.2%"><div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/antwerp.jpg" style="width: 100%">
+            <img class = "myImages" id="myImg" src="Images/antwerp.webp" style="width: 100%">
             <div><p>ANTWERP, 2021</p></div>
         </div></th>
     </tr>
@@ -295,21 +295,21 @@
 <table cellpadding="0" border="0" style="width: 60%; padding-bottom: 200px" >
     <th style="width:36%">
         <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/chinatown.jpg" style="width: 100%">
+            <img class = "myImages" id="myImg" src="Images/chinatown.webp" style="width: 100%">
             <div><p>ANTWERP, 2021</p></div>
         </div>
     </th>
     <th style="width: 2px"/>
     <th style="width:30.2%">
         <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/lxbuild.jpg" style="width: 100%">
+            <img class = "myImages" id="myImg" src="Images/lxbuild.webp" style="width: 100%">
             <div><p>LISBON, 2020</p></div>
         </div>
     </th>
     <th style="width: 2px"/>
     <th style="width:30.2%">
         <div class="content_img">
-            <img class = "myImages" id="myImg" src="Images/groni.jpg" style="width: 100%">
+            <img class = "myImages" id="myImg" src="Images/groni.webp" style="width: 100%">
             <div><p>GRONINGEN, 2021</p></div>
         </div>
     </th>
