--- a/matte.html
+++ b/matte.html
@@ -377,6 +377,14 @@
         modal.style.display = "none";
     }
 
+
+    document.onkeydown = function(evt) {
+        evt = evt || window.event;
+        if (evt.keyCode == 27) {
+            modal.style.display = "none";
+        }
+    };
+
 </script>
 </body>
 </html>
