--- a/bold.html
+++ b/bold.html
@@ -44,7 +44,7 @@
         </th>
         <th style="width:15.6%;">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/orange3.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
                 <div><p>ROME, 2021</p></div>
             </div>
         </th>
@@ -60,7 +60,16 @@
 
 </table>
 
-<table style="padding-top: 150px; width: 60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <th style="width:50%">
+        <div class="content_img">
+            <img class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
+            <div class="content_img"><p>MILAN, 2021</p></div>
+        </div>
+    </th>
+</table>
+
+<table style="padding-top: 100px; width: 60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
             <div class="content_img">
@@ -91,7 +100,7 @@
 <table style="padding-top: -10px; width:60% border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/blue5.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
@@ -109,7 +118,33 @@
         </th>
 </table>
 
-<table style="padding-top: 150px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+    <tr>
+        <th style="width:43.3%" >
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
+
+            </div>
+        </th>
+        <th style="width:38.8%;" rowspan="2">
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/char4.webp" style="width: 100%">
+
+            </div>
+        </th>
+    </tr>
+    <tr>
+        <th style="width:43.3%;" >
+            <div class="content_img">
+                <img class = "myImages" id="myImg" src="Images/char2.webp" style="width: 100%">
+
+            </div>
+        </th>
+    </tr>
+
+</table>
+
+<table style="padding-top: 100px; width: 50%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
             <div class="content_img">
@@ -123,24 +158,6 @@
         <th style="width:50%">
             <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/red2.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
-            </div>
-        </th>
-    </tr>
-</table>
-
-<table style="padding-top: 8px; width: 50%;">
-    <tr>
-        <th style="width:45%">
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/green1.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
-            </div>
-        </th>
-        <th style="width:1%"></th>
-        <th style="width:45%">
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/green2.webp" style="width: 100%">
                 <div class="content_img"><p>MILAN, 2021</p></div>
             </div>
         </th>
